--- a/backend/composer.json
+++ b/backend/composer.json
@@ -22,6 +22,7 @@
         "mews/captcha": "^3.3",
         "mongodb/laravel-mongodb": "4.0.2",
         "nwidart/laravel-modules": "^10.0",
+        "pbmedia/laravel-ffmpeg": "^8.3",
         "predis/predis": "^2.2",
         "spatie/laravel-data": "^3.9",
         "spatie/laravel-permission": "^6.0",
