--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,6 +12,7 @@
         "elasticsearch/elasticsearch": "^8.10",
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.2",
+        "intervention/image": "*",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/scout": "^10.5",
