--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "astrotomic/laravel-translatable": "^11.12.1",
         "cboden/ratchet": "^0.4.4",
         "codezero/laravel-unique-translation": "^4.1",
         "defstudio/telegraph": "^1.38",
