--- a/backend/composer.json
+++ b/backend/composer.json
@@ -13,7 +13,7 @@
         "elasticsearch/elasticsearch": "^8.10",
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.2",
-        "intervention/image": "*",
+        "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/scout": "^10.5",
