--- a/backend/.env.copy
+++ b/backend/.env.copy
@@ -1,4 +1,4 @@
-APP_NAME=migrant
+APP_NAME=laravel-vuejs-tutorial
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -9,12 +9,19 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel_migrant
-DB_USERNAME=root
+DB_PORT=5432
+DB_DATABASE=laravel_vuejs_tutorial
+DB_USERNAME=postgres
 DB_PASSWORD=
+
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel_vuejs_tutorial
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 # BROADCAST_DRIVER=log
 BROADCAST_DRIVER=redis
@@ -40,7 +47,7 @@ REDIS_CLIENT=predis
 # MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="noreply@bb.uz"
-MAIL_FROM_NAME="Migrant website"
+MAIL_FROM_NAME=" website"
 
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
