--- a/backend/.env.copy
+++ b/backend/.env.copy
@@ -2,8 +2,7 @@ APP_NAME=laravel-vuejs-tutorial
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-#APP_URL=http://localhost
-APP_URL=https://6776-185-139-138-210.ngrok-free.app/
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
