--- a/backend/composer.json
+++ b/backend/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.3",
         "astrotomic/laravel-translatable": "^11.12.1",
         "cboden/ratchet": "^0.4.4",
         "codezero/laravel-unique-translation": "^4.1",
@@ -27,7 +27,8 @@
         "predis/predis": "^2.2",
         "spatie/laravel-data": "^3.9",
         "spatie/laravel-permission": "^6.0",
-        "spatie/laravel-translatable": "^6.5"
+        "spatie/laravel-translatable": "^6.5",
+        "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
@@ -82,6 +83,9 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
+        },
+        "platform": {
+            "php": "8.3.0"
         }
     },
     "minimum-stability": "stable",
