--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,24 +33,24 @@ jobs:
     - name: Cache Composer dependencies
       uses: actions/cache@v2
       with:
-        path: vendor
-        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+        path: backend/vendor
+        key: ${{ runner.os }}-composer-${{ hashFiles('backend/composer.lock') }}
         restore-keys: ${{ runner.os }}-composer-
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
+      run: composer install --prefer-dist --no-progress --no-suggest --working-dir=backend
 
     - name: Copy .env.example to .env
-      run: cp .env.example .env
+      run: cp backend/.env.example backend/.env
 
     - name: Generate application key
-      run: php artisan key:generate
+      run: php artisan key:generate --working-dir=backend
 
     - name: Set up database
       run: |
         sudo apt-get install -y postgresql-client
-        php artisan config:cache
-        php artisan migrate --force
+        php artisan config:cache --working-dir=backend
+        php artisan migrate --force --working-dir=backend
       env:
         DB_CONNECTION: pgsql
         DB_HOST: 127.0.0.1
@@ -60,7 +60,7 @@ jobs:
         DB_PASSWORD: password
 
     - name: Run tests
-      run: php artisan test
+      run: php artisan test --working-dir=backend
       env:
         DB_CONNECTION: pgsql
         DB_HOST: 127.0.0.1
