--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
           POSTGRES_PASSWORD: password
           POSTGRES_DB: test_db
         options: >-
-          --health-cmd "pg_isready -U ${{ secrets.POSTGRES_USER }}" 
+          --health-cmd "pg_isready" 
           --health-interval 10s 
           --health-timeout 5s 
           --health-retries 5
@@ -34,7 +34,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: backend/vendor
-        key: ${{ runner.os }}-composer-${{ hashFiles('backend/composer.lock') }}
+        key: ${{ runner.os }}-composer-${{ hashFiles('**/backend/composer.lock') }}
         restore-keys: ${{ runner.os }}-composer-
 
     - name: Install dependencies
