--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,8 @@ jobs:
         DB_USERNAME: root
         DB_PASSWORD: password
 
+    - name: Run seeder
+      run: php artisan db:seed --working-dir=backend
     - name: Run tests
       run: php artisan test --working-dir=backend
       env:
