--- a/backend/.github/workflows/ci.yml
+++ b/backend/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
-    
+
     services:
       postgres:
         image: postgres:13
@@ -14,13 +14,13 @@ jobs:
           POSTGRES_PASSWORD: password
           POSTGRES_DB: test_db
         options: >-
-          --health-cmd "pg_isready" 
-          --health-interval 10s 
-          --health-timeout 5s 
+          --health-cmd "pg_isready"
+          --health-interval 10s
+          --health-timeout 5s
           --health-retries 5
         ports:
           - 5432:5432
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -33,25 +33,25 @@ jobs:
     - name: Cache Composer dependencies
       uses: actions/cache@v2
       with:
-        path: backend/vendor
-        key: ${{ runner.os }}-composer-${{ hashFiles('**/backend/composer.lock') }}
+        path: vendor
+        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
         restore-keys: ${{ runner.os }}-composer-
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest --working-dir=backend
+      run: composer install --prefer-dist --no-progress --no-suggest
 
     - name: Copy .env.example to .env
-      run: cp backend/.env.example backend/.env
+      run: cp .env.example .env
 
     - name: Generate application key
-      run: php artisan key:generate --working-dir=backend
+      run: php artisan key:generate
 
     - name: Set up database
       run: |
         sudo apt-get install -y postgresql-client
-        php artisan config:cache --working-dir=backend
-        php artisan migrate --force --working-dir=backend
-        php artisan db:seed --force --working-dir=backend
+        php artisan config:cache
+        php artisan migrate --force
+        php artisan db:seed --force
       env:
         DB_CONNECTION: pgsql
         DB_HOST: 127.0.0.1
@@ -61,7 +61,7 @@ jobs:
         DB_PASSWORD: password
 
     - name: Run tests
-      run: php artisan test --working-dir=backend
+      run: php artisan test
       env:
         DB_CONNECTION: pgsql
         DB_HOST: 127.0.0.1
