--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -38,20 +38,24 @@ jobs:
         restore-keys: ${{ runner.os }}-composer-
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest --working-dir=backend
+      run: composer install --prefer-dist --no-progress --no-suggest
+      working-directory: backend
 
     - name: Copy .env.example to .env
-      run: cp backend/.env.example backend/.env
+      run: cp .env.example .env
+      working-directory: backend
 
     - name: Generate application key
-      run: php artisan key:generate --working-dir=backend
+      run: php artisan key:generate
+      working-directory: backend
 
     - name: Set up database
       run: |
         sudo apt-get install -y postgresql-client
-        php artisan config:cache --working-dir=backend
-        php artisan migrate --force --working-dir=backend
-        php artisan db:seed --force --working-dir=backend
+        php artisan config:cache
+        php artisan migrate --force
+        php artisan db:seed --force
+      working-directory: backend
       env:
         DB_CONNECTION: pgsql
         DB_HOST: 127.0.0.1
@@ -61,7 +65,8 @@ jobs:
         DB_PASSWORD: password
 
     - name: Run tests
-      run: php artisan test --working-dir=backend
+      run: php artisan test
+      working-directory: backend
       env:
         DB_CONNECTION: pgsql
         DB_HOST: 127.0.0.1
