--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -37,6 +37,10 @@ jobs:
         key: ${{ runner.os }}-composer-${{ hashFiles('**/backend/composer.lock') }}
         restore-keys: ${{ runner.os }}-composer-
 
+    - name: Generate JWT Secret
+      run: php artisan jwt:secret
+      working-directory: backend
+
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
       working-directory: backend
